# wordle

./: default.nix  shell.nix  wordle.cabal
.direnv/: cache-pre346004.5aaed40d22f  cache-pre353535.48d63e924a2  drv
app/: Main.hs
