cabal-version:      3.0
name:               wordle
version:            0.1.0.0
synopsis:           Wordle implementation

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Anna Kudriavtsev
maintainer:         anna328p@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

executable wordle
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        unordered-containers ^>=0.2.16.0,
        rainbow ^>=0.34.2.2,
        bytestring,
        text,
        hashable,
        time
    hs-source-dirs:   app
    default-language: Haskell2010
